--- a/POKEDEX/assets/css/global.css
+++ b/POKEDEX/assets/css/global.css
@@ -1,4 +1,39 @@
 
 * {
     font-family: 'Roboto', sans-serif;
+    box-sizing: border-box;
+}
+
+.content{
+    padding: 1rem;
+
+}
+.content h1{
+    margin: 0;
+}
+
+ol.pokemons{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    list-style: nome;
+    padding: 0;
+    margin: 0;
+}
+
+ol.pokemons li {
+    margin: .5rem;
+    padding: 1rem;
+    background-color: #14A06F;
+    color: #fff;
+    border-radius: 1rem;
+    display: flex;
+    flex-direction: column;
+   
+}  
+
+ol.pokemon li img {
+
+    max-width: 100%;
+    height: 100px;
+
 }
