--- a/POKEDEX/assets/css/global.css
+++ b/POKEDEX/assets/css/global.css
@@ -3,37 +3,25 @@
     font-family: 'Roboto', sans-serif;
     box-sizing: border-box;
 }
+body{
+    background-color: #f6f8fc;
+}
 
 .content{
+    width: 100vw;
+    height: 100vh;
     padding: 1rem;
-
+    background-color: #fff;
+    
 }
-.content h1{
-    margin: 0;
+@media screen and (main-width: 992px) {
+    .content{
+        max-width: 992px;
+        height: auto;
+        margin: 1rem auto;
+        border-radius: 1rem;
+       
+    }
+    
 }
 
-ol.pokemons{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    list-style: nome;
-    padding: 0;
-    margin: 0;
-}
-
-ol.pokemons li {
-    margin: .5rem;
-    padding: 1rem;
-    background-color: #14A06F;
-    color: #fff;
-    border-radius: 1rem;
-    display: flex;
-    flex-direction: column;
-   
-}  
-
-ol.pokemon li img {
-
-    max-width: 100%;
-    height: 100px;
-
-}
