alteração no index para arrumar o script do js

--- a/POKEDEX/assets/css/pokedex.css
+++ b/POKEDEX/assets/css/pokedex.css
@@ -169,7 +169,7 @@
 
 @media screen and (main-width: 992px) {
     .pokemons{
-        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
       
     }
 }
