--- a/projetos/angular-blog/src/app/pages/home/home.component.html
+++ b/projetos/angular-blog/src/app/pages/home/home.component.html
@@ -1,11 +1,28 @@
+
+
 <app-menu-title></app-menu-title>
-<div class="articles">
+<div class="container__articles">
     <div class="articles__main">  
-        <app-big-card></app-big-card>  
+        <app-big-card photoCover="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRB90wQ15WrjnHGwZevVQPcNn_V7KklCB4pKw&usqp=CAU"
+        cardTitle="Novo filme dos Vingadores" cardDescription="O filme vai se passar np universo dos X-man onde ambos vão lutar contra o Hulk descontrolado"></app-big-card>  
 
     </div>
     <div class="articles__others"> 
-        <app-small-card></app-small-card>   
+        <app-small-card
+        cardTitle="Os novo parceiros do Homem Formiga"
+        photoCover="https://f.i.uol.com.br/fotografia/2023/02/16/167658634563eead69d6a11_1676586345_3x2_md.jpg">
+
+        </app-small-card> 
+        <app-small-card 
+        cardTitle="Novo vilão do Homem Aranha"
+        photoCover="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTBE93pVmp9_fUm3t-lep3wssi85ueXp3PF9w&usqp=CAU">>
+
+        </app-small-card>  
+        <app-small-card
+        cardTitle="Quarteto fantastico contra Galático"
+        photoCover="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT78Q-zw93EYwNBP5ue7xzN9-phIdVb-pY1GA&usqp=CAU">>
+
+        </app-small-card>
         
     </div>
 </div>
