--- a/projetos/angular-blog/src/app/componets/big-card/big-card.component.css
+++ b/projetos/angular-blog/src/app/componets/big-card/big-card.component.css
@@ -1,7 +1,6 @@
 .container__big-card{
-    border: solid white 2px;
     margin-left: 10px;
-    margin-left: 10px;
+    margin-right: 10px;
     width: 400px;
     height: 600px;
 
@@ -12,11 +11,22 @@
 }
 
 .big-card__title >h1{
-    margin-top: 1opx;
+    margin-top: 10px;
     font-size: 20px;
 }
 
-.big-card__description >p{
+.big-card__description{
     margin-top: 10px;
-    color: gray;
+
+}
+
+
+.big-card__description >p >a{
+     color: gray;
+}
+
+.big-card__photo >img{
+    width: 100%;
+    min-width: 400px;
+
 }
