--- a/projetos/angular-blog/src/app/componets/big-card/big-card.component.css
+++ b/projetos/angular-blog/src/app/componets/big-card/big-card.component.css
@@ -15,14 +15,22 @@
     font-size: 20px;
 }
 
+
+
+
 .big-card__description{
     margin-top: 10px;
 
 }
 
 
+
 .big-card__description >p >a{
      color: gray;
+}
+
+.big-card__description  >a{
+    text-decoration: none;
 }
 
 .big-card__photo >img{
