--- a/projeto-buzzfeed/src/app/components/quizz/quizz.component.html
+++ b/projeto-buzzfeed/src/app/components/quizz/quizz.component.html
@@ -3,17 +3,17 @@
         <img src="assets/imgs/logo.png" alt="" srcset="">
         <h3>{{ title }}</h3>
     </div>
-    <div class="quizz_questions">
-        <h3>{{ questionsSelected.question}}</h3>
+    <div *ngIf=!finished class="quizz_questions">
+        <h3>{{ questionSelected.question}}</h3>
     </div>
-    <div class="quizz_options">
-        <button class="btn-option">
-            optionname
+    <div *ngIf =!finished class="quizz_options">
+        <button *ngFor="let option of questionSelected.options; let i = index" (click)="playerChoose(option.alias)" class="btn-option">
+            {{option.name}}
         </button>
     </div>
-    <div *ngIF=finished class="quizz_results">
+    <div *ngIf=finished class="quizz_results">
         <h1>O Seu resultado é:</h1>
-        <p>Resposta Selecionada</p>
+        <p>{{ answerSelected }}</p>
     </div>
 
 </div>
